# music_playr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: audio.hpp  db.hpp  logger.hpp  player.hpp
include/glad/: glad.h
src/: audio.cpp  db.cpp  glad.c  list.cpp  logger.cpp  main.cpp  player.cpp
